--- a/src/app/components/Header/style.module.scss
+++ b/src/app/components/Header/style.module.scss
@@ -1,12 +1,16 @@
 @import "../../../styles/palette";
 @import "../../../styles/mixins";
 
-.mainNavigation {
+.headerWrapper{
   height: 92px;
-  position: absolute;
   width: 100%;
   top: 36px;
   left: 0;
+}
+
+.mainNavigation {
+  display: block;
+  height: 100%;
 
   ul {
     display: flex;
