--- a/src/app/components/Footer/style.module.scss
+++ b/src/app/components/Footer/style.module.scss
@@ -27,48 +27,22 @@
       background-color: $white;
       transform: scaleX(1);
     }
+
+    @include mediaMax(570){
+      margin: 0;
+    }
   }
 
-  .invitationCat{
-    position: absolute;
-    right: -110px;
-    bottom: -110px;
-    width: 160px;
-    height: 160px;
-    transition: all 0.3s ease-in-out;
-    background: $white;
-    border-bottom-left-radius: 30%;
-    border-top-right-radius: 30%;
-    border-top-left-radius: 10%;
+  .policyWrapper{
+    padding: 73px;
 
-    &Open{
-      right: 0;
-      bottom: 0;
+    @include mediaMax(795){
+      padding: 0;
     }
 
-    .lottieWrapper{
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
-
-    .arrowsOpen{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 50px;
-      height: 50px;
-      transform: rotate(225deg);
-      z-index: 100;
-      cursor: pointer;
-
-      div {
-        pointer-events: none;
-      }
-    }
-
-    .arrowsClose{
-      transform: rotate(45deg);
+    @include mediaMax(570){
+      display: flex;
+      flex-direction: column-reverse;
     }
   }
 }
