--- a/src/app/components/Header/style.module.scss
+++ b/src/app/components/Header/style.module.scss
@@ -6,6 +6,11 @@
   width: 100%;
   top: 36px;
   left: 0;
+
+  @include mediaMax(500) {
+    height: 62px;
+    top: 10px;
+  }
 }
 
 .mainNavigation {
@@ -23,15 +28,15 @@
     }
   }
 
-  @include mediaMax(960){
+  @include mediaMax(1000){
     position: fixed;
     top: -92px;
     left: -100%;
     background-color: $black;
-    height: calc(100vh + 68px);
+    height: calc(100vh + 92px);
     width: 100%;
     transition: .6s;
-    z-index: 10;
+    z-index: 999;
 
     ul {
       height: 100%;
@@ -49,26 +54,42 @@
   left: 0;
 }
 
+.logo{
+  display: none;
+  width: 92px;
+  height: 92px;
+  margin-left: 30px;
+
+  img{
+    width: 100%;
+    height: 100%;
+  }
+
+  @include mediaMax(1000){
+    display: block;
+  }
+}
+
 .hamburger {
   display: none;
 
-  @include mediaMax(960) {
+  @include mediaMax(1000) {
     display: block;
     position: absolute;
     right: 30px;
-    top: 5%;
+    top: 50%;
     transform: translateY(-50%);
-    width: 26px;
-    height: 15px;
+    width: 30px;
+    height: 20px;
     cursor: pointer;
     z-index: 1000;
 
     span {
       display: block;
-      height: 2px;
+      height: 3px;
       width: 100%;
       background-color: $white;
-      margin-bottom: 2px;
+      margin-bottom: 5px;
       transition: 0.5s all ease;
     }
   }
