--- a/src/app/sections/Main/style.module.scss
+++ b/src/app/sections/Main/style.module.scss
@@ -1,6 +1,21 @@
+@import "../../../styles/mixins";
+
 .mainWrapper{
   height: calc(100vh - 256px);
   padding: 36px 73px 0 73px;
+
+  @include mediaMax(1300){
+    padding: 36px 43px 0 43px;
+  }
+
+  @include mediaMax(600){
+    padding: 56px 0 0 0;
+    height: calc(100vh - 156px);
+  }
+
+  @include mediaMax(340){
+    padding: 76px 0 0 0;
+  }
 }
 
 .contentWrapper{
@@ -9,10 +24,44 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @include mediaMax(976){
+    position: relative;
+  }
 }
 
 .leftSide{
   width: 46%;
+
+  .divider{
+    margin: 50px 0;
+  }
+
+  @include mediaMax(1300){
+    width: 50%;
+  }
+
+  @include mediaMax(976){
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p{
+      text-align: center;
+      font-size: 32px;
+    }
+  }
+
+  @include mediaMax(500){
+    .divider{
+      margin: 20px 0;
+    }
+
+    p {
+      font-size: 26px;
+    }
+  }
 }
 
 .rightSide{
@@ -22,5 +71,19 @@
       display: block;
       width: 100%;
     }
+  }
+
+  @include mediaMax(1300){
+    width: 48%;
+  }
+
+  @include mediaMax(976){
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 47%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    opacity: .1;
   }
 }
