--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -7,7 +7,6 @@
   width: 160px;
   height: 160px;
   transition: all 0.3s ease-in-out;
-  //background: $white;
   border-bottom-left-radius: 30%;
   border-top-right-radius: 30%;
   border-top-left-radius: 10%;
@@ -21,6 +20,18 @@
     width: 100%;
     height: 100%;
     position: relative;
+
+    &:before{
+      position: absolute;
+      content: "";
+      width: 64px;
+      height: 38px;
+      border-radius: 100%;
+      top: 20px;
+      right: 43px;
+      background: #FFFFFF;
+      transform: rotate(-13deg);
+    }
   }
 
   .arrowsOpen{
