--- a/src/app/components/SearchDynamic/style.module.scss
+++ b/src/app/components/SearchDynamic/style.module.scss
@@ -1,10 +1,11 @@
 @import "../../../styles/palette";
+@import "../../../styles/mixins";
+
 .wrapper {
   display: flex;
   flex-direction: column;
   position: relative;
   z-index: 10;
-  min-width: 200px;
 }
 .container {
   display: flex;
@@ -18,21 +19,25 @@
   position: relative;
   border-radius: 2px;
   border-bottom: 3px solid $white;
+
+  @include mediaMax(735){
+    max-width: 190px;
+  }
 }
 .iconWrapper {
   position: absolute;
-  right: 12px;
+  right: 5px;
   z-index: 1;
   cursor: pointer;
   top: 0;
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
 }
 
 .inputSearch {
   height: 100%;
   letter-spacing: 0.4px;
-  padding: 10px 38px 10px 10px;
+  padding: 10px 40px 10px 10px;
   outline: none;
   font-size: 14px;
   width: 100%;
@@ -46,7 +51,7 @@
 }
 
 .loadingWrapper {
-  height: 38px;
-  width: 38px;
+  height: 35px;
+  width: 35px;
   padding-top: 7px;
 }
