--- a/src/app/sections/Contacts/style.module.scss
+++ b/src/app/sections/Contacts/style.module.scss
@@ -180,7 +180,7 @@
     }
 
     &Animated {
-      transform: translate(-50%, 200%) rotate(-45deg);
+      //transform: translate(-50%, 200%) rotate(-45deg);
       opacity: 0;
     }
 
