--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -30,6 +30,6 @@ $green-gradient--radial: radial-gradient(50% 50% at 50% 50%, rgba(27, 211, 101, 
 $blue-gradient--radial: radial-gradient(50% 50% at 50% 50%, rgba(0, 209, 255, 0.4) 0%, rgba(24, 194, 194, 0.156) 45.83%, rgba(68, 116, 239, 0.0104167) 99.99%, rgba(19, 179, 150, 0) 100%);
 
 //SHADOWS
-$blue-shadow: 0px 4px 33px 5px #099FF4;
-$green-shadow: 0px 4px 33px 5px #1BD365;
-$yellow-shadow: 0px 4px 33px 5px #D0C804;
+$blue-shadow: 0px 4px 23px 0 #099FF4;
+$green-shadow: 0px 4px 23px 0 #1BD365;
+$yellow-shadow: 0px 4px 23px 0 #D0C804;
