--- a/src/app/components/PlatformCard/style.module.scss
+++ b/src/app/components/PlatformCard/style.module.scss
@@ -1,5 +1,5 @@
-@import "../../../../styles/palette";
-@import "../../../../styles/mixins";
+@import "../../../styles/palette";
+@import "../../../styles/mixins";
 
 .cardWrapper{
   position: relative;
