--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -6,6 +6,8 @@ $lightblue: #099FF4;
 $active: #D0C804;
 $yellow: #FFCC00;
 $lilac: #E6683C;
+$green: #04B9D0;
+$red: #A83D1FFF;
 $white: #FFFFFF;
 $grey: rgba(#FFFFFF, .7);
 $grey-yellow: rgba(255, 255, 255, 0.73);
