--- a/src/app/components/SearchDynamic/style.module.scss
+++ b/src/app/components/SearchDynamic/style.module.scss
@@ -29,17 +29,22 @@
   right: 5px;
   z-index: 1;
   cursor: pointer;
-  top: 0;
-  width: 30px;
-  height: 30px;
+  top: 15%;
+  width: 25px;
+  height: 25px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .inputSearch {
   height: 100%;
   letter-spacing: 0.4px;
-  padding: 10px 40px 10px 10px;
+  padding: 5px 40px 5px 10px;
   outline: none;
-  font-size: 14px;
+  font-size: 24px;
   width: 100%;
   min-width: 120px;
   border: 0;
